{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "634ff493-a55f-4fa1-8306-f92b7883345a",
            "actions": [
                {
                    "name": "Division",
                    "type": "Button",
                    "id": "61041ad8-687c-4618-a8d0-b6fca0a6191d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveArrows",
                    "type": "Value",
                    "id": "79c6b519-7dcf-4325-81e5-7b8f8f161494",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveMouse",
                    "type": "Value",
                    "id": "660f736a-02d2-48df-8bc5-b8ebbeacccd8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "169889bf-e3b8-4433-a355-0155ef391ec3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Division",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "09635ac0-4d8f-4245-9d56-a64f44d90ee7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveArrows",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bc543f2b-e1ae-4c56-ad9e-936fb9819844",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveArrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f6e6de44-d649-4158-94c6-835b1e4cb638",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveArrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e8b846a2-c7dd-490d-b5d4-a404b8565dd9",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveArrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "15939c04-4641-42ae-9da6-3aec115918e3",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveArrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0608a98b-5682-437b-9650-c39f1252f012",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}